[package]
name = "hubbub"
version = "0.1.0"
authors = ["nicename"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "*"

[dependencies.ws]
path = "./src/ws"
features = ["ssl"]